force-app/main/default/objects/Bulletin_Request__c/fields/Bulletin_Status__c.field-meta.xml
<CustomField>
    <fullName>Bulletin_Status__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Status</label>
    <referenceTo>Bulletin_Status__c</referenceTo>
    <relationshipLabel>Requests</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>