force-app/main/default/objects/Bulletin_Request__c/listViews/Bulletin_MyRequests.listView-meta.xml
<ListView>
    <fullName>Bulletin_MyRequests</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Description__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Requests</label>
</ListView>