force-app/main/default/objects/Bulletin_Request__c/listViews/Bulletin_Support_Bulletin_Request.listView-meta.xml
<ListView>
    <fullName>Bulletin_Support_Bulletin_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Bulletin Support</label>
    <queue>Bulletin_Support</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>