force-app/main/default/objects/Bulletin_Request__c/listViews/Open_Support_Requests.listView-meta.xml
<ListView>
    <fullName>Open_Support_Requests</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Support Request</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>Open Support Requests</label>
</ListView>