force-app/main/default/objects/Bulletin_Request__c/listViews/SuggestionBox_My_Suggestions.listView-meta.xml
<ListView>
    <fullName>SuggestionBox_My_Suggestions</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Description__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Suggestion</value>
    </filters>
    <label>My Suggestions</label>
</ListView>