force-app/main/default/objects/Bulletin_Request__c/listViews/SuggestionBox_Recent_Suggestions.listView-meta.xml
<ListView>
    <fullName>SuggestionBox_Recent_Suggestions</fullName>
    <columns>Description__c</columns>
    <filterScope>Mine</filterScope>
    <label>Recent Suggestions</label>
</ListView>